@@ -47,6 +47,24 @@ class WFError extends WFObject
     
 }
 
+// @todo eventually refactor internal WFErrorsException usage into this class... then we can wrap helpers around it.
+// class WFErrorArray extends WFObject
+// {
+//     /**
+//      * @var array An array of WFError objects, keyed by "property" of error.
+//      *            - Integer keys indicate errors that are not mapped to specific properties or are errors due to interdependent keys.
+//      *            - Non-integer keys indicate the "property" that the error was generated by.
+//      */
+//     protected $errors;
+// 
+//     public function __construct($errors = array())
+//     {
+//         parent::__construct();
+//         if (!is_array($errors)) throw new WFException("WFErrorArray must be initialized with an array");
+//         $this->errors = $errors;
+//     }
+// }
+
 /**
  * A special WFException subclass meant for carrying multiple WFError objects.
  *
@@ -129,6 +147,15 @@ class WFErrorsException extends WFException
             return $this->errors[$key];
         }
         return array();
+    }
+
+    public function errorCodesForKey($key)
+    {
+        $codes = array();
+        foreach ($this->errorsForKey($key) as $e) {
+            $codes[] = $e->errorCode();
+        }
+        return $codes;
     }
 
     /**
