@@ -7,6 +7,7 @@ Legend:
 [BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.
 
 Version 0.2.4 - ??
+- [new] Add errorCodesForKey() method to WFErrorsException to make looking for certain errors easier for test writing.
 - [new] Add createTestStub phocoa task to create test stubs for PHPUnit.
 - [new] Add Forgotten Password link in "login error message" as well.
 - [bugfix] Fix a couple of bugs that caused .htaccess support to be broken in "newProject" runs.
